MLOps/week4/day24-26/diabetes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diabetes-api-service
  namespace: mlops
  labels:
    app: diabetes-api
    mlops/model-version: v1.0
    mlops/api-version: v2.0
spec:
  type: NodePort  # 对外暴露（生产可用LoadBalancer/Ingress）
  selector:
    app: diabetes-api  # 关联Deployment的Pod标签
  ports:
    - name: api-port
      port: 9000          # Service内部端口
      targetPort: 9000    # 容器端口（和Deployment一致）
      nodePort: 30090     # 节点端口（范围30000-32767，固定便于访问）
      protocol: TCP
