MLOps/week4/day24-26/diabetes-ingress.yaml
# diabetes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diabetes-api-ingress
  namespace: mlops
spec:
  rules:
    - host: api.mlops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: diabetes-api-service
                port:
                  number: 9000
